lab1/Test/L1-A-4-34.cmm
struct JbFs6SqAOKMBSXbr1dy6 XEa5Bp ( struct LGxA5p8E7wmYhkNMhehf 
  {
  int ls 
}SemDlB1JLVzS1Wa_G6 [ 1710118519 ] [ 1572243057 ] 
  , float Ghrzzk50jhztaX8Oce ) {
  if ( - F ( [ GCboIk3yQQsiKzy ( cZ3feIuhMu ) = co 
    ] = - - yeecZ6jiSilS1G * yI7O09 + U >= H || vW2jwW 
    || W3S9IvcCPsKV ) {
int     struct {
    }a21UqV ;
  }else   A_lRNd6wqifJ ;

}
int 
&& int x4sUmnWtV9BNsPAHj [ 1177302955 ] 
;
